components/fia-api/envs/production/fia-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fia-api
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: fia-api
          image: ghcr.io/fiaisis/fia-api@sha256:f310587cf29832a67b6d8fb64cf82b18d3062a8b166ec53df4147167e9b73c9c
